auto-test/tests/chapter_18/invalid_parse/extra_credit/two_union_kws.c
union u {
    int a;
};

union union u x;  

int main(void) {
    return 0;
}